// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json.spec yarnLockParsedV1ToRawJSON 1`] = `
{
  "object": {},
  "version": "5",
}
`;

exports[`json.spec yarnLockParsedV2ToRawJSON 1`] = `
{
  "__metadata": {
    "version": "5",
  },
}
`;
